(lang dune 3.21)

(name dune_cram_example)

(generate_opam_files true)

(source
 (github arvidj/dune_cram_example))

(authors "Arvid Jakobsson <arvid.jakobsson@gmail.com>")

(maintainers "Arvid Jakobsson <arvid.jakobsson@gmail.com>")

(license MIT)

(documentation https://github.com/arvidj/dune_cram_example)

(package
 (name dune_cram_example)
 (synopsis "A cram example")
 (description "A cram example")
 (depends ocaml)
 (tags ("example" "cram" your project)))
